--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -1,25 +1,17 @@
-pipeline {
-  agent any
+name: Automated API tests using Postman CLI
 
-  tools {nodejs "{your_nodejs_configured_tool_name}"}
+on: push
 
-  stages {
-    stage('Install Postman CLI') {
-      steps {
-        sh 'curl -o- "https://dl-cli.pstmn.io/install/linux64.sh" | sh'
-      }
-    }
-
-    stage('Postman CLI Login') {
-      steps {
-        sh 'postman login --with-api-key $POSTMAN_API_KEY'
-        }
-    }
-
-    stage('Running collection') {
-      steps {
-        sh 'postman collection run "38912362-2a66c92b-a7de-4ef7-92fd-25962d0b60da"-e "38912362-0a935107-5ef8-41b7-9d29-657ec8bbbb60"'
-      }
-    }
-  }
-}
+jobs:
+  automated-api-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Postman CLI
+        run: |
+          curl -o- "https://dl-cli.pstmn.io/install/linux64.sh" | sh
+      - name: Login to Postman CLI
+        run: postman login --with-api-key ${{ secrets.POSTMAN_API_KEY }}
+      - name: Run API tests
+        run: |
+          postman collection run "38912362-2a66c92b-a7de-4ef7-92fd-25962d0b60da" -e "38912362-0a935107-5ef8-41b7-9d29-657ec8bbbb60"
